--- a/provider-gcp/examples/containeraws/provider-aws/00-containeraws-network.yaml
+++ b/provider-gcp/examples/containeraws/provider-aws/00-containeraws-network.yaml
@@ -7,7 +7,7 @@ spec:
     cidrBlock: 10.0.0.0/16
     enableDnsHostnames: true
     enableDnsSupport: true
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: vpc
       Name: containerawsGcpUpboundVPC
@@ -20,7 +20,7 @@ spec:
   forProvider:
     vpcIdRef:
       name: containeraws-gcp-upbound
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: internet-gateway
       Name: containerawsGcpUpboundInternetGateway
@@ -31,9 +31,9 @@ metadata:
   name: containeraws-gcp-upbound-subnet-private-a
 spec:
   forProvider:
-    availabilityZone: us-west-2a
+    availabilityZone: my-aws-az
     cidrBlock: 10.0.1.0/24
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: subnet
       kubernetes.io/role/internal-elb: "1"
@@ -47,9 +47,9 @@ metadata:
   name: containeraws-gcp-upbound-subnet-public-a
 spec:
   forProvider:
-    availabilityZone: us-west-2a
+    availabilityZone: my-aws-az
     cidrBlock: 10.0.101.0/24
-    region: us-west-2
+    region: my-aws-region
     mapPublicIpOnLaunch: true
     tags:
       ResourceType: subnet
@@ -64,7 +64,7 @@ metadata:
   name: containeraws-gcp-upbound-route-table-private-a
 spec:
   forProvider:
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: route-table
       Name: containerawsGcpUpboundPrivateRouteTbl1
@@ -77,7 +77,7 @@ metadata:
   name: containeraws-gcp-upbound-route-table-public-a
 spec:
   forProvider:
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: route-table
       Name: containerawsGcpUpboundPublicRouteTbl1
@@ -90,7 +90,7 @@ metadata:
   name: containeraws-gcp-upbound-private-table-assoc-a
 spec:
   forProvider:
-    region: us-west-2
+    region: my-aws-region
     routeTableIdRef:
       name: containeraws-gcp-upbound-route-table-private-a
     subnetIdRef:
@@ -102,7 +102,7 @@ metadata:
   name: containeraws-gcp-upbound-route-table-assoc-a
 spec:
   forProvider:
-    region: us-west-2
+    region: my-aws-region
     routeTableIdRef:
       name: containeraws-gcp-upbound-route-table-public-a
     subnetIdRef:
@@ -117,9 +117,22 @@ spec:
     destinationCidrBlock: 0.0.0.0/0
     gatewayIdRef:
       name: containeraws-gcp-upbound-internet-gateway
-    region: us-west-2
+    region: my-aws-region
     routeTableIdRef:
       name: containeraws-gcp-upbound-route-table-public-a
+---
+apiVersion: ec2.aws.upbound.io/v1beta1
+kind: Route
+metadata:
+  name: containeraws-gcp-upbound-route-nat-gateway-a
+spec:
+  forProvider:
+    destinationCidrBlock: 0.0.0.0/0
+    natGatewayIdRef:
+      name: containeraws-gcp-upbound-nat-a
+    region: my-aws-region
+    routeTableIdRef:
+      name: containeraws-gcp-upbound-route-table-private-a
 ---
 apiVersion: ec2.aws.upbound.io/v1beta1
 kind: EIP
@@ -127,7 +140,7 @@ metadata:
   name: containeraws-gcp-upbound-nat-eip-a
 spec:
   forProvider:
-    region: us-west-2
+    region: my-aws-region
     tags:
       ResourceType: elastic-ip
       Name: containerawsGcpUpboundNatEip1
@@ -140,7 +153,7 @@ spec:
   forProvider:
     allocationIdRef:
       name: containeraws-gcp-upbound-nat-eip-a
-    region: us-west-2
+    region: my-aws-region
     subnetIdRef:
       name: containeraws-gcp-upbound-subnet-public-a
     tags:
