Use pull_request as the CI workflow trigger event
- Remove github.com/upbound/official-providers dependency
  Drop updoc from generation

Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/.github/workflows/uptest.yml
+++ b/.github/workflows/uptest.yml
@@ -9,15 +9,11 @@ env:
   GO_VERSION: '1.19'
   DOCKER_BUILDX_VERSION: 'v0.8.2'
 
-  UPBOUND_MARKETPLACE_PUSH_ROBOT_USR: ${{ secrets.UPBOUND_MARKETPLACE_PUSH_ROBOT_USR }}
-  UPBOUND_BOT_GITHUB_TOKEN: ${{ secrets.UPBOUND_BOT_GITHUB_TOKEN }}
-
 jobs:
   get-example-list:
     runs-on: ubuntu-22.04
     if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/test-examples') }}
     outputs:
-      provider_name: ${{ steps.get-example-list-name.outputs.provider-name }}
       example_list: ${{ steps.get-example-list-name.outputs.example-list }}
       example_hash: ${{ steps.get-example-list-name.outputs.example-hash }}
     steps:
@@ -32,6 +28,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr checkout ${{ github.event.issue.number }}
+          git submodule update --init --recursive
           OUTPUT=$(git log -1 --format='%H')
           echo "::set-output name=commit-sha::$OUTPUT"
 
@@ -68,7 +65,7 @@ jobs:
   uptest:
     runs-on: ubuntu-22.04
     needs: get-example-list
-    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/test-examples') }}
+    if: ${{ github.event.comment.author_association == 'MEMBER' && github.event.issue.pull_request && contains(github.event.comment.body, '/test-examples') }}
     steps:
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v1
@@ -92,6 +89,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr checkout ${{ github.event.issue.number }}
+          git submodule update --init --recursive
           OUTPUT=$(git log -1 --format='%H')
           echo "::set-output name=commit-sha::$OUTPUT"
 
@@ -113,12 +111,6 @@ jobs:
           path: ${{ steps.go.outputs.cache }}
           key: ${{ runner.os }}-build-uptest-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-build-uptest-
-
-      # git needs to be able to access private repositories under upbound.
-      - name: Login to Github
-        run: |
-          git config --global user.name "upbound-bot"
-          echo "machine github.com login upbound-bot password $UPBOUND_BOT_GITHUB_TOKEN" > ~/.netrc
 
       - name: Cache Go Dependencies
         uses: actions/cache@v2
@@ -143,6 +135,7 @@ jobs:
           UPTEST_GCP_CREDS: ${{ secrets.UPTEST_GCP_CREDS }}
           EXAMPLE_LIST: ${{ needs.get-example-list.outputs.example_list }}
           UPTEST_EXAMPLE_VALUE_REPLACEMENTS: ${{ secrets.UPTEST_EXAMPLE_VALUE_REPLACEMENTS }}
+          DUMP_DIRECTORY: "./_output/cluster-dump"
         run: make uptest
 
       - name: Create Successful Status Check
