Remove Terraform-specific comments from secretmanager.SecretVersion's SecretDataSecretRef field
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
+++ b/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
@@ -71,9 +71,7 @@ spec:
                     description: Secret Manager secret resource
                     type: string
                   secretDataSecretRef:
-                    description: 'The secret data. Must be no larger than 64KiB. Note:
-                      This property is sensitive and will not be displayed in the
-                      plan.'
+                    description: The secret data. Must be no larger than 64KiB.
                     properties:
                       key:
                         description: The key to select.
