Fix google_bigquery_job references
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/examples-generated/bigquery/job.yaml
+++ b/examples-generated/bigquery/job.yaml
@@ -16,9 +16,7 @@ spec:
       - datasetIdSelector:
           matchLabels:
             testing.upbound.io/example-name: foo
-        projectIdSelector:
-          matchLabels:
-            testing.upbound.io/example-name: foo
+        projectId: ${google_bigquery_table.foo.project}
         tableIdSelector:
           matchLabels:
             testing.upbound.io/example-name: foo
