--- a/examples/bigquery/datatransferconfig.yaml
+++ b/examples/bigquery/datatransferconfig.yaml
@@ -8,12 +8,12 @@ metadata:
   name: query-config
 spec:
   forProvider:
+    displayName: my-query
     dataSourceId: scheduled_query
     destinationDatasetIdSelector:
       matchLabels:
-        testing.upbound.io/example-name: my_dataset
-    displayName: my-query
-    location: asia-northeast1
+        testing.upbound.io/example-name: default
+    location: EU
     params:
       destination_table_name_template: my_table
       query: SELECT name FROM tabl WHERE x = 'y'
@@ -28,13 +28,13 @@ metadata:
   annotations:
     meta.upbound.io/example-id: bigquery/v1beta1/datatransferconfig
   labels:
-    testing.upbound.io/example-name: my_dataset
-  name: my-dataset
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
-    description: bar
-    friendlyName: foo
-    location: asia-northeast1
-
----
-
+    defaultTableExpirationMs: 3600000
+    description: This is a test description
+    friendlyName: test
+    labels:
+      env: default
+    location: EU
