--- a/examples/bigquery/job.yaml
+++ b/examples/bigquery/job.yaml
@@ -3,11 +3,14 @@ kind: Job
 metadata:
   annotations:
     meta.upbound.io/example-id: bigquery/v1beta1/job
+    upjet.upbound.io/manual-intervention: "This resource requires a schema to be provisioned in the referenced dataset's table"
   labels:
     testing.upbound.io/example-name: job
   name: job
 spec:
   forProvider:
+    # jobId must be unique in the project and location
+    jobId: my_job_query
     labels:
       example-label: example-value
     query:
@@ -16,13 +19,13 @@ spec:
       - datasetIdSelector:
           matchLabels:
             testing.upbound.io/example-name: bar
-        projectId: zippy-parity-368910
+        # the referenced dataset table must have a schema when this job runs (dependency issue)
         tableIdSelector:
           matchLabels:
             testing.upbound.io/example-name: foo
       flattenResults: true
-      query: SELECT status FROM `foo`
-      #useLegacySql: false
+      # the qualified table name used below is in the following format: <project name>.<dataset name>.<table name>
+      query: SELECT status FROM crossplane-playground.bar.foo
       scriptOptions:
       - keyResultStatement: LAST
 
@@ -32,6 +35,7 @@ apiVersion: bigquery.gcp.upbound.io/v1beta1
 kind: Dataset
 metadata:
   annotations:
+    upjet.upbound.io/manual-intervention: "Dependent resource skipped: This resource requires a schema to be provisioned in the referenced dataset's table"
     meta.upbound.io/example-id: bigquery/v1beta1/job
   labels:
     testing.upbound.io/example-name: bar
@@ -48,6 +52,7 @@ apiVersion: bigquery.gcp.upbound.io/v1beta1
 kind: Table
 metadata:
   annotations:
+    upjet.upbound.io/manual-intervention: "Dependent resource skipped: This resource requires a schema to be provisioned in the referenced dataset's table"
     meta.upbound.io/example-id: bigquery/v1beta1/job
   labels:
     testing.upbound.io/example-name: foo
