--- a/examples/bigquery/connection.yaml
+++ b/examples/bigquery/connection.yaml
@@ -49,6 +49,7 @@ apiVersion: sql.gcp.upbound.io/v1beta1
 kind: DatabaseInstance
 metadata:
   annotations:
+    uptest.upbound.io/pre-delete-hook: testhooks/delete-user.sh
     meta.upbound.io/example-id: bigquery/v1beta1/connection
   labels:
     testing.upbound.io/example-name: instance
