--- a/package/crds/compute.gcp.upbound.io_forwardingrules.yaml
+++ b/package/crds/compute.gcp.upbound.io_forwardingrules.yaml
@@ -176,7 +176,7 @@ spec:
                       APIs, IP address must be provided.
                     type: string
                   ipAddressRef:
-                    description: Reference to a Address in compute to populate ipAddress.
+                    description: Reference to a Address to populate ipAddress.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -210,7 +210,7 @@ spec:
                     - name
                     type: object
                   ipAddressSelector:
-                    description: Selector for a Address in compute to populate ipAddress.
+                    description: Selector for a Address to populate ipAddress.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -289,7 +289,7 @@ spec:
                       balancing.
                     type: string
                   networkRef:
-                    description: Reference to a Network in compute to populate network.
+                    description: Reference to a Network to populate network.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -323,7 +323,7 @@ spec:
                     - name
                     type: object
                   networkSelector:
-                    description: Selector for a Network in compute to populate network.
+                    description: Selector for a Network to populate network.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -432,8 +432,7 @@ spec:
                       subnet mode, a subnetwork must be specified.
                     type: string
                   subnetworkRef:
-                    description: Reference to a Subnetwork in compute to populate
-                      subnetwork.
+                    description: Reference to a Subnetwork to populate subnetwork.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -467,8 +466,7 @@ spec:
                     - name
                     type: object
                   subnetworkSelector:
-                    description: Selector for a Subnetwork in compute to populate
-                      subnetwork.
+                    description: Selector for a Subnetwork to populate subnetwork.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -513,8 +511,8 @@ spec:
                       the target object.
                     type: string
                   targetRef:
-                    description: Reference to a RegionTargetHTTPProxy in compute to
-                      populate target.
+                    description: Reference to a RegionTargetHTTPProxy to populate
+                      target.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -548,8 +546,8 @@ spec:
                     - name
                     type: object
                   targetSelector:
-                    description: Selector for a RegionTargetHTTPProxy in compute to
-                      populate target.
+                    description: Selector for a RegionTargetHTTPProxy to populate
+                      target.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
