Introduce a breaking and a non-breaking change in existing schemas and add a new CRD
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/package/crds/cloudplatform.gcp.upbound.io_projectiampolicies.yaml
+++ b/package/crds/cloudplatform.gcp.upbound.io_projectiampolicies.yaml
@@ -5,18 +5,18 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
-  name: networks.compute.gcp.upbound.io
+  name: projectiampolicies.cloudplatform.gcp.upbound.io
 spec:
-  group: compute.gcp.upbound.io
+  group: cloudplatform.gcp.upbound.io
   names:
     categories:
     - crossplane
     - managed
     - gcp
-    kind: Network
-    listKind: NetworkList
-    plural: networks
-    singular: network
+    kind: ProjectIAMPolicy
+    listKind: ProjectIAMPolicyList
+    plural: projectiampolicies
+    singular: projectiampolicy
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,8 +35,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Network is the Schema for the Networks API. Manages a VPC network
-          or legacy network resource on GCP.
+        description: ProjectIAMPolicy is the Schema for the ProjectIAMPolicys API.
+          Collection of resources to manage IAM policy for a project.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,7 +51,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: NetworkSpec defines the desired state of Network
+            description: ProjectIAMPolicySpec defines the desired state of ProjectIAMPolicy
             properties:
               deletionPolicy:
                 default: Delete
@@ -64,39 +64,18 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  autoCreateSubnetworks:
-                    description: When set to true, the network is created in "auto
-                      subnet mode" and it will create a subnet for each region automatically
-                      across the 10.128.0.0/9 address range. When set to false, the
-                      network is created in "custom subnet mode" so the user can explicitly
-                      connect subnetwork resources.
-                    type: boolean
-                  deleteDefaultRoutesOnCreate:
-                    description: If set to true, default routes (0.0.0.0/0) will be
-                      deleted immediately after network creation. Defaults to false.
-                    type: boolean
-                  description:
-                    description: An optional description of this resource. The resource
-                      must be recreated to modify this field.
+                  policyData:
+                    description: The google_iam_policy data source that represents
+                      the IAM policy that will be applied to the project. The policy
+                      will be merged with any existing policy applied to the project.
                     type: string
-                  mtu:
-                    description: Maximum Transmission Unit in bytes. The minimum value
-                      for this field is 1460 and the maximum value is 1500 bytes.
-                    type: number
                   project:
-                    description: The ID of the project in which the resource belongs.
-                      If it is not provided, the provider project is used.
-                    type: string
-                  routingMode:
-                    description: The network-wide routing mode to use. If set to REGIONAL,
-                      this network's cloud routers will only advertise routes with
-                      subnetworks of this network in the same region as the router.
-                      If set to GLOBAL, this network's cloud routers will advertise
-                      routes with all subnetworks of this network, across regions.
-                      Possible values are REGIONAL and GLOBAL.
+                    description: The project id of the target project. This is not
+                      inferred from the provider.
                     type: string
                 required:
-                - autoCreateSubnetworks
+                - policyData
+                - project
                 type: object
               providerConfigRef:
                 default:
@@ -270,19 +249,14 @@ spec:
             - forProvider
             type: object
           status:
-            description: NetworkStatus defines the observed state of Network.
+            description: ProjectIAMPolicyStatus defines the observed state of ProjectIAMPolicy.
             properties:
               atProvider:
                 properties:
-                  gatewayIpv4:
-                    description: The gateway address for default routing out of the
-                      network. This value is selected by GCP.
+                  etag:
+                    description: (Computed) The etag of the project's IAM policy.
                     type: string
                   id:
-                    description: an identifier for the resource with format projects/{{project}}/global/networks/{{name}}
-                    type: string
-                  selfLink:
-                    description: The URI of the created resource.
                     type: string
                 type: object
               conditions:
