RegionTargetHTTPProxy - Use selflink for resolving RegionURLMap

--- a/package/crds/compute.gcp.upbound.io_regiontargethttpproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiontargethttpproxies.yaml
@@ -82,8 +82,7 @@ spec:
                       the mapping from URL to the BackendService.
                     type: string
                   urlMapRef:
-                    description: Reference to a RegionURLMap in compute to populate
-                      urlMap.
+                    description: Reference to a RegionURLMap to populate urlMap.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -117,8 +116,7 @@ spec:
                     - name
                     type: object
                   urlMapSelector:
-                    description: Selector for a RegionURLMap in compute to populate
-                      urlMap.
+                    description: Selector for a RegionURLMap to populate urlMap.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
