add folder ref for folder iam member

--- a/examples/cloudplatform/folderiammember.yaml
+++ b/examples/cloudplatform/folderiammember.yaml
@@ -10,4 +10,4 @@ spec:
   forProvider:
     member: "${data.google_iam_member.member}"
     role: "roles/viewer"
-    folder: ${data.cloudplatform_folder.folderId}
+    folder: ${data.cloudplatform_folder.id}
