add access token  source type

--- a/package/crds/gcp.upbound.io_providerconfigs.yaml
+++ b/package/crds/gcp.upbound.io_providerconfigs.yaml
@@ -93,6 +93,7 @@ spec:
                     enum:
                     - None
                     - Secret
+                    - AccessToken
                     - InjectedIdentity
                     - Environment
                     - Filesystem
